[package]
name = "md-cli"
version = "0.1.0"
edition = "2021"
description = "Markdown Node Editor - Parse and edit markdown files by heading structure"
license = "MIT"
repository = "https://github.com/Jinof/md-cli"
readme = "README.md"
keywords = ["markdown", "editor", "cli"]
categories = ["text-editors", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
